--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.5.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bufferutil": "^4.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -52,7 +54,9 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.2.2",
     "uploadthing": "^5.5.3",
+    "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.0",
+    "ws": "^8.14.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
